service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sworkshop-svc
spec:
  selector:
    app: k8sworkshop
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
