frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: url-routing-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: k8sworkshop.97e0757827fe4263a29d.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: k8sworkshop-svc
          servicePort: 8080
        path: /
